added cookie button

--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
 
 <footer class="footer">
 <ul class="footer-nav">
+    <div class="footer-mob-1">
     <li class="footer-item">
         <a href="#" class="footer-link">About</a>
     </li>
@@ -309,6 +310,8 @@
     <li class="footer-item">
         <a href="#" class="footer-link">Privacy Policy</a>
     </li>
+   </div>
+   <div class="footer-mob-2">
     <li class="footer-item">
         <a href="#" class="footer-link">Careers</a>
     </li>
@@ -318,6 +321,7 @@
     <li class="footer-item">
         <a href="#" class="footer-link">Contact Us</a>
     </li>
+</div>
 </ul>
 <img src="./img/icon.png" alt="logo" class="footer-logo">
 <p class="footer-copyright">
