scroll to button add

--- a/index.html
+++ b/index.html
@@ -59,9 +59,13 @@
      <img src="img/hero.png" alt="minimalist bank items" class="header-img grid-item-2">  
     </div>
 
+
+    <div id="scroll-into"></div>
 </header>
 
 <!-- ================================================== -->
+
+
 
 <section class="section" id="section-1">
     <div class="section-title">
