--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
 
-<section class="section" id="section-1">
+<section class="section section-hidden" id="section-1">
     <div class="section-title">
         <h2 class="section-description">Features</h2>
         <h3 class="section-header">
@@ -131,7 +131,7 @@
 
 <!-- ================================================= -->
 
-<section class="section" id="section-2">
+<section class="section section-hidden" id="section-2">
 <div class="section-title">
     <h2 class="section-description">Operations</h2>
     <h3 class="section-header">
@@ -211,7 +211,7 @@
 
 <!-- ==================================================== -->
 
-<section class="section" id="section-3">
+<section class="section section-hidden" id="section-3">
  <div class="section-title section-title-testimonials">
 <h2 class="section-description">Not sure yet?</h2>
 <h3 class="section-header">
@@ -287,7 +287,7 @@
 
 <!-- ======================================================= -->
 
-<section class="section section-sign-up">
+<section class="section section-hidden section-sign-up">
     <div class="section-title">
         <h3 class="section-header">
             The best day to join Bankist was one year ago. The second best is
@@ -301,7 +301,6 @@
 
 <footer class="footer">
 <ul class="footer-nav">
-    <div class="footer-mob-1">
     <li class="footer-item">
         <a href="#" class="footer-link">About</a>
     </li>
@@ -314,8 +313,8 @@
     <li class="footer-item">
         <a href="#" class="footer-link">Privacy Policy</a>
     </li>
-   </div>
-   <div class="footer-mob-2">
+  
+  
     <li class="footer-item">
         <a href="#" class="footer-link">Careers</a>
     </li>
@@ -325,7 +324,7 @@
     <li class="footer-item">
         <a href="#" class="footer-link">Contact Us</a>
     </li>
-</div>
+
 </ul>
 <img src="./img/icon.png" alt="logo" class="footer-logo">
 <p class="footer-copyright">
