defer script add

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 
     <link rel="stylesheet" href="./style.css">
 
+    <!-- --javascript -->
+
+    <script defer src="./script.js"></script>
+
 </head>
 <body>
     
@@ -357,7 +361,7 @@ this is a demo website of my bankist project i have made with javascript.
 
     <!-- custom js -->
 
-    <script src="./script.js"></script>
+    <!-- <script src="./script.js"></script> -->
 
 </body>
 </html>
